[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "content-calendar-ai-mcp"
version = "0.1.0"
description = "Plan and schedule social media and blog content."
authors = [{name="MEOK AI Labs", email="nicholas@meok.ai"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/content-calendar-ai-mcp"
